# lemonadestand

./: LICENSE  README.md  building_blocks.py  customers.py  datagen.py  game.py  lemonadestand.py  lemontree.py  lemsim.py  linear_regression.py  pyproject.toml  simple.py
data/: lem_stand_results.csv  lem_stand_results.xlsx  ls_results.csv  test.json
files/: ls.twb
lemonadestand.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
models/: linear_regression.py
