[tool.poetry]
name = "lemonadestand"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
Faker = "^4.15.0"
sklearn = "^0.0"
seaborn = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
